--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,132 @@
-.App {
-  text-align: center;
+
+body{
+  font-family: "open sans", serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper{
+  background: linear-gradient(to right , #e67e22 , #e74c3c);
   display: flex;
-  flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+ .main {
+  box-shadow: 0px 13px 40px -13px rgba(82, 67, 67, 0.788);
+  padding: 8%;
+  background: url("img/picThree.jpg")  center no-repeat;
+} 
+
+.title-container {
+  background-size: cover;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: center; 
+  text-align: center;
+  color: rgba(31, 30, 31, 0.788); 
+
+  text-align: right;
 }
 
-.App-link {
-  color: #61dafb;
+.weatherDetails{
+
+  color:#240704;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.forecast{
+  color:floralwhite;
+}
+
+.title-container-title {
+  font-size: 50px;
+  letter-spacing: 2px;
+  line-height: 1.3;
+  font-family: 'Roboto Slab', serif;
+}
+
+.title-container-subtitle {
+  font-style: italic;
+  font-weight: 100;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  font-family: "Merriweather", serif;
+}
+
+ .form-container {
+  background-color: #2c3e50;
+  
+}
+
+input[type="text"] {
+  background-color:floralwhite;
+  border: 0;
+  border-bottom: solid 1px #f16051;
+  
+  color:blue !important;
+  font-weight: lighter;
+  letter-spacing: 2px;
+
+  font-size: 20px;
+} 
+
+ input[type="text"] { 
+    outline: none;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px #636e8d inset;
+    -webkit-text-fill-color: #fff !important;
+} 
+
+ button {
+  border: 0;
+  padding: 8px 20px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  background-color: #f16051;
+  color: #fff;
+  font-weight: 100;
+}
+
+button:active {
+  outline: none;
+}
+
+.weather__info {
+  width: 60%;
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: 2px;
+}
+
+.weather__key {
+  color: #f16051;
+  border-bottom: solid 2px rgba(128, 116, 93, 0.06);
+  padding: 20px 0 20px 0;
+  font-weight: 400;
+}
+
+.weather__key:last-child {
+  border: 0;
+}
+
+.weather__value {
+  color: #fff;
+  font-weight: 200;
+}
+
+.weather__error {
+  color: #f16051;
+  font-size: 20px;
+  letter-spacing: 1px;
+  font-weight: 200;
+}  
+
+.daily{
+  font-size: 21px;
+  font-family: cursive;
 }
